# abnormal-driving-behaviour-reconizing

./: .gitignore  CNN-LSTM模型.ipynb  README.md  draw.ipynb  gps_sample.csv  requirements.txt  年度数据.csv  年度数据2.csv  数据清洗提取.py  数据预处理2.ipynb  特征计算.py
.claude/: launch.json
0422_gps/: CNN-LSTM-attention.py  LSTM.py  __init__.py
0422_gps/result_cnn_lstm_attention/: best_model.pth
0422_gps/result_lstm/: best_model.pth
abnormal_driving_client/: 3.py  CNNLSTMModel.py  backend_runtime.py  backend_service.py  best_model.pth  client_app.py  client_app2.py  model_definition.py  mqtt_publisher_dummy.py  web_server.py
abnormal_driving_client_tauri/: .gitignore  index.html  package-lock.json  package.json
abnormal_driving_client_tauri/src/: App.css  App.tsx
abnormal_driving_client_tauri/src-tauri/: Cargo.toml  tauri.conf.json
abnormal_driving_client_tauri/src-tauri/capabilities/: default.json
abnormal_driving_client_tauri/src-tauri/src/: main.rs
gps速度分布/: 速度分布统计.py  速度统计结果.txt
llm_labeling_system/: README.md  __init__.py  app.py  batch_label.py  config.py  db.py  deepseek_client.py  import_legacy.py  repository.py  review_server.py  schemas.py  storage.py  windowing.py
llm_labeling_system/routers/: labels.py  meta.py  scan.py  sessions.py  settings.py  suggest.py  windows.py
llm_labeling_system/services/: ai_settings.py  deepseek_client.py  export.py  prompting.py  scan_jobs.py  windowing.py
map_matching/: 111.ipynb  ST-Matching.py  hmm_matcher.py  leuvenmapmatching.py  mannual-matching.py
加减速度分布/: 加减速度统计结果.txt  加速度分布统计.py
(+17 files in other folders)
