[package]
name = "abnormal_driving_client_tauri"
version = "0.1.0"
description = "Modern desktop client for abnormal driving detection"
authors = ["Mth13"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-dialog = "2.7.1"
time = "=0.3.44"

[features]
custom-protocol = ["tauri/custom-protocol"]
